test/neg/neg-memberof2.errc
upcxx_memberof.. requires a global_ptr to a standard-layout type
